--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-drawer": "^2.5.1",
     "react-native-easy-grid": "^0.2.0",
+    "react-native-uuid": "^1.4.9",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
