--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-easy-grid": "^0.2.0",
     "react-native-pinch-zoom-view": "^0.2.0",
     "react-native-uuid": "^1.4.9",
+    "react-native-xml2js": "^1.0.3",
     "react-navigation": "^3.0.9"
   },
   "devDependencies": {
