--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/battle-tactics.png",
       "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
